--- a/hero born assignment/.vscode/settings.json
+++ b/hero born assignment/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "practice-unity-git.sln"
+    "dotnet.defaultSolution": "hero born assignment.sln"
 }
